ESPProject/.metadata/.plugins/org.eclipse.cdt.ui/EmbeddedProject.build.log
10:54:45 **** Incremental Build of configuration Debug for project EmbeddedProject ****
make all 
'Building file: ../Src/GUIConf.c'
'Invoking: MCU GCC Compiler'
C:\Users\Ecto1\Documents\GitHub\-Embedded-systems-\Project\EmbeddedProject\Debug
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-sp-d16 -D__weak="__attribute__((weak))" -D__packed="__attribute__((__packed__))" -DUSE_HAL_DRIVER -DSTM32F746xx -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Inc" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/STM32F7xx_HAL_Driver/Inc" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/STM32F7xx_HAL_Driver/Inc/Legacy" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/CMSIS/Include" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/CMSIS/Device/ST/STM32F7xx/Include" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/GUI" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/GUI/inc" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/inc" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/src" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Common" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Components" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Components/ft5336" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Components/rk043fn48h" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Utilities" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Utilities/Fonts"  -Os -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/GUIConf.d" -MT"Src/GUIConf.o" -o "Src/GUIConf.o" "../Src/GUIConf.c"
'Finished building: ../Src/GUIConf.c'
' '
'Building file: ../Src/GUI_X.c'
'Invoking: MCU GCC Compiler'
C:\Users\Ecto1\Documents\GitHub\-Embedded-systems-\Project\EmbeddedProject\Debug
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-sp-d16 -D__weak="__attribute__((weak))" -D__packed="__attribute__((__packed__))" -DUSE_HAL_DRIVER -DSTM32F746xx -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Inc" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/STM32F7xx_HAL_Driver/Inc" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/STM32F7xx_HAL_Driver/Inc/Legacy" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/CMSIS/Include" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/CMSIS/Device/ST/STM32F7xx/Include" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/GUI" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/GUI/inc" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/inc" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/src" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Common" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Components" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Components/ft5336" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Components/rk043fn48h" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Utilities" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Utilities/Fonts"  -Os -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/GUI_X.d" -MT"Src/GUI_X.o" -o "Src/GUI_X.o" "../Src/GUI_X.c"
'Finished building: ../Src/GUI_X.c'
' '
'Building file: ../Src/LCDConf.c'
'Invoking: MCU GCC Compiler'
C:\Users\Ecto1\Documents\GitHub\-Embedded-systems-\Project\EmbeddedProject\Debug
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-sp-d16 -D__weak="__attribute__((weak))" -D__packed="__attribute__((__packed__))" -DUSE_HAL_DRIVER -DSTM32F746xx -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Inc" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/STM32F7xx_HAL_Driver/Inc" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/STM32F7xx_HAL_Driver/Inc/Legacy" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/CMSIS/Include" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/CMSIS/Device/ST/STM32F7xx/Include" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/GUI" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/GUI/inc" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/inc" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/src" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Common" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Components" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Components/ft5336" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Components/rk043fn48h" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Utilities" -I"C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/Utilities/Fonts"  -Os -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/LCDConf.d" -MT"Src/LCDConf.o" -o "Src/LCDConf.o" "../Src/LCDConf.c"
../Src/LCDConf.c:140:8: error: unknown type name 'DMA2D_HandleTypeDef'
 static DMA2D_HandleTypeDef           hdma2d;
        ^
../Src/LCDConf.c:202:24: error: unknown type name 'DMA2D_HandleTypeDef'
 void HAL_DMA2D_MspInit(DMA2D_HandleTypeDef *hdma2d)
                        ^
../Src/LCDConf.c:215:26: error: unknown type name 'DMA2D_HandleTypeDef'
 void HAL_DMA2D_MspDeInit(DMA2D_HandleTypeDef *hdma2d)
                          ^
../Src/LCDConf.c: In function 'LCD_LL_Init':
../Src/LCDConf.c:626:9: error: request for member 'Init' in something not a structure or union
   hdma2d.Init.Mode         = DMA2D_R2M;
         ^
../Src/LCDConf.c:626:30: error: 'DMA2D_R2M' undeclared (first use in this function)
   hdma2d.Init.Mode         = DMA2D_R2M;
                              ^
../Src/LCDConf.c:626:30: note: each undeclared identifier is reported only once for each function it appears in
../Src/LCDConf.c:627:9: error: request for member 'Init' in something not a structure or union
   hdma2d.Init.ColorMode    = DMA2D_RGB565;
         ^
In file included from C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_def.h:49:0,
                 from C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_rcc.h:47,
                 from C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Inc/stm32f7xx_hal_conf.h:251,
                 from C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal.h:48,
                 from C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/inc/stm32746g_discovery_sdram.h:48,
                 from C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/BSP/inc/stm32746g_discovery_lcd.h:53,
                 from C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Inc/main.h:2,
                 from C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Inc/LCDConf.h:41,
                 from ../Src/LCDConf.c:49:
C:/Users/Ecto1/Documents/GitHub/-Embedded-systems-/Project/EmbeddedProject/Drivers/STM32F7xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h:975:33: error: 'DMA2D_OUTPUT_RGB565' undeclared (first use in this function)
 #define DMA2D_RGB565            DMA2D_OUTPUT_RGB565  
                                 ^
../Src/LCDConf.c:627:30: note: in expansion of macro 'DMA2D_RGB565'
   hdma2d.Init.ColorMode    = DMA2D_RGB565;
                              ^
../Src/LCDConf.c:628:9: error: request for member 'Init' in something not a structure or union
   hdma2d.Init.OutputOffset = 0x0;     
         ^
../Src/LCDConf.c:630:9: error: request for member 'Instance' in something not a structure or union
   hdma2d.Instance          = DMA2D; 
         ^
../Src/LCDConf.c:632:6: warning: implicit declaration of function 'HAL_DMA2D_Init' [-Wimplicit-function-declaration]
   if(HAL_DMA2D_Init(&hdma2d) != HAL_OK)
      ^
make: *** [Src/LCDConf.o] Error 1

10:54:48 Build Finished (took 2s.895ms)

